//
//  Constants.swift
//  QuestionAndAnswer
//
//  Created by Andrew Tran on 7/10/2025.
//

struct Constants {
    struct Form {
        static let createANewFormTitle = "Create a new form"
        static let createNew = "Create a new form"
        
        struct Field {
            static let fieldNameLabel = "Field Name"
            static let fieldTypeLabel = "Field Type"
            static let fieldNamePlaceholder = "Enter the field name here"
            static let fieldTypePickerLabel = "Pick field type"
            static let fieldTypePickerIdentifier = "fieldTypePicker"
        }
        
        struct FormName {
            static let formNameLabel = "Form name"
            static let formNamePlaceholder = "Enter form name here"
            static let formNameUntitled = "Untitled form"
        }
    }
}
