struct StringConstants {
    
    
    struct Navigation {
        static let forms = "Forms"
        static let journal = "Journal"
    }
} 
